@@ -1,0 +1,4 @@
+#!/usr/bin/perl
+use lib 't/lib';
+use TestFor::Code::TidyAll::SpacesInPaths;
+TestFor::Code::TidyAll::SpacesInPaths->runtests;
